--- a/nodejs/aliexpress-multioption-retriever/package.json
+++ b/nodejs/aliexpress-multioption-retriever/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dorian Bugeja Ludoi.com",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^16.1.1",
+    "redux": "^3.7.2"
+  }
 }
