--- a/nodejs/aliexpress-multioption-retriever/frontend/package.json
+++ b/nodejs/aliexpress-multioption-retriever/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
@@ -15,12 +15,10 @@
     "babel-preset-react": "^6.24.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-rethinkdb": "^0.6.0",
     "webpack": "^3.8.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.9.4"
-  },
-  "scripts": {
-    "start:dev": "webpack-dev-server"
   }
 }
